Updates to CSS, changed paragraph block to markdown block

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 wagtail = "^5.0"
 psycopg2-binary = "^2.9.6"
 wagtailcodeblock = "^1.29.0.0"
+wagtail-markdown = "^0.11.0"
 
 
 [tool.poetry.group.dev.dependencies]
