--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ wagtail = "^5.0"
 psycopg2-binary = "^2.9.6"
 wagtailcodeblock = "^1.29.0.0"
 wagtail-markdown = "^0.11.0"
+wagtailmedia = "^0.14.2"
 
 
 [tool.poetry.group.dev.dependencies]
